--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "next": "16.0.10",
+    "pdfkit": "^0.15.0",
     "react": "19.2.1",
     "react-dom": "19.2.1"
   },
