--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "postinstall": "node ./scripts/patch-swc-helpers.js"
   },
   "dependencies": {
     "next": "16.0.10",
