Add academic schedule selector modal for refill edit

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "postinstall": "node ./scripts/patch-swc-helpers.js"
   },
   "dependencies": {
+    "firebase-admin": "^13.0.1",
     "next": "16.0.10",
     "pdfkit": "^0.17.2",
     "react": "19.2.1",
